<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <ImageButton
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_confirm_pw"
        app:layout_constraintStart_toStartOf="@+id/txt_confirm_pw"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirm_pw"
        app:srcCompat="@drawable/ic_large_button" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingTop="15px"
        android:text="Sudah memiliki akun ? "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/btn_to_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:paddingTop="15px"
        android:text="Login"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_regis"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toTopOf="@+id/buttonRegister" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_confirm_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_pw"
        app:layout_constraintEnd_toEndOf="@id/txt_pw"
        app:layout_constraintStart_toStartOf="@id/txt_pw"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        app:layout_constraintEnd_toEndOf="@id/txt_email"
        app:layout_constraintStart_toStartOf="@id/txt_email">

        <EditText
            android:id="@+id/editPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_pw" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_noHP"
        app:layout_constraintEnd_toEndOf="@id/txt_noHP"
        app:layout_constraintStart_toStartOf="@id/txt_noHP">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_noHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/txt_nama"
        app:layout_constraintStart_toStartOf="@id/txt_nama"
        app:layout_constraintTop_toBottomOf="@id/txt_nama"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="@id/txt_BuatAkun"
        app:layout_constraintStart_toStartOf="@id/txt_BuatAkun"
        app:layout_constraintTop_toBottomOf="@id/txt_BuatAkun">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nama" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_BuatAkun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txt_BuatAkun"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>