<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"/>

    <ImageView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_pw"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/txt_pw"
        app:layout_constraintTop_toBottomOf="@+id/txt_pw"
        app:srcCompat="@drawable/ic_large_button"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/btn_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txt_Email"
        app:layout_constraintStart_toStartOf="@id/txt_Email"
        app:layout_constraintEnd_toEndOf="@id/txt_Email">

        <EditText
            android:id="@+id/edt_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_pw" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="@id/img_logo"
        app:layout_constraintTop_toBottomOf="@id/img_logo">

        <EditText
            android:id="@+id/edt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Belum pumya akun ? "
        android:paddingTop="15px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:ignore="MissingConstraints" />

    <TextView
        android:paddingTop="15px"
        android:id="@+id/btn_to_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Registrasi"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>